fixed alignment username + mail fields

--- a/api/public/tailstyle.css
+++ b/api/public/tailstyle.css
@@ -648,6 +648,10 @@ video {
   list-style-type: none;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -708,6 +712,10 @@ video {
 
 .text-right {
   text-align: right;
+}
+
+.text-start {
+  text-align: start;
 }
 
 .text-white {
